# idc-mosaic

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-manifest.yml
dev/: DEVELOPMENT.md  development_process.md  segmentations_overlay.md
docs/: index.html
docs/css/: style.css
docs/data/: citations.json  manifest.json  manifest_diverse.json  manifest_seg_test.json
docs/data/manifests/: index.json
docs/data/manifests/ct/: 2026-02-14.json  2026-02-15.json  2026-02-16.json  2026-02-17.json  2026-02-18.json  2026-02-19.json  2026-02-20.json  2026-02-21.json  2026-02-22.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-02-28.json  2026-03-01.json  2026-03-02.json  2026-03-03.json  2026-03-04.json  2026-03-05.json  2026-03-06.json  2026-03-07.json  2026-03-08.json  2026-03-09.json  2026-03-10.json  2026-03-11.json  2026-03-12.json  2026-03-13.json  2026-03-14.json  2026-03-15.json  2026-03-16.json  2026-03-17.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-25.json  (+99 more)
docs/data/manifests/diverse/: 2026-02-14.json  2026-02-15.json  2026-02-16.json  2026-02-17.json  2026-02-18.json  2026-02-19.json  2026-02-20.json  2026-02-21.json  2026-02-22.json  2026-02-23.json  2026-02-24.json  2026-02-25.json  2026-02-26.json  (+126 more)
docs/js/: mosaic.js
scripts/: generate.py
src/idc_mosaic/: __init__.py  generator.py  sampler.py
src/idc_mosaic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
