[project]
name = "idc-mosaic"
version = "0.1.0"
description = "Interactive mosaic showcasing NCI Imaging Data Commons cancer imaging diversity"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "IDC Team"}
]
dependencies = [
    "idc-index>=0.9.0",
    "requests>=2.28.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
idc-mosaic = "idc_mosaic.generator:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
